[package]
name = "durnitisp"
version = "0.1.0"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
gflags = "^0.3"
log = "0.4"
nursery = "^0.0.1"
prometheus = "0.11.0"
stderrlog = "0.5.1"
tiny_http = "0.8.0"
socket2 = "0.3.19" 
icmp-socket = "0.1.1"
resolve = "^0.2.0"