[package]
name = "durnitisp"
version = "0.2.1"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
anyhow = "1"
gflags = "^0.3"
nursery = "^0.0.1"
prometheus = "0.13.1"
tiny_http = "0.12.0"
socket2 = "0.4.4" 
icmp-socket = "0.2.0"
resolve = "^0.2.0"