[package]
name = "durnitisp"
version = "0.2.3"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
anyhow = "1"
gflags = "^0.3"
nursery = "^0.0.1"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
tiny_http = "0.12.0"
socket2 = "0.5.1"
icmp-socket = "0.2.0"
resolve = "^0.2.0"
